# my-first-substrate-project-series-III-part-9

./: README.md
my-first-client/: client.js
my-first-smart-contracts/counter/: Cargo.toml  lib.rs
